<resources>
    <string name="app_name">School Reason</string>

    <string name="title_home">홈</string>
    <string name="title_meal">급식 상세보기</string>
    <string name="title_schedule">학사 일정</string>
    <string name="title_menu">전체</string>

    <string name="school">학교</string>

    <string name="school_name">학교 이름</string>
    <string name="school_address">학교 주소</string>

    <string name="today_meal">오늘의 급식</string>
    <string name="month_schedule">이번달 학사일정</string>

    <string name="version">버전 정보</string>
    <string name="open_source">오픈소스 라이선스</string>

    <string name="breakfast">아침</string>
    <string name="lunch">점심</string>
    <string name="dinner">저녁</string>

    <string name="input_school_name">학교 이름을 입력해주세요</string>
    <string name="select_school">학교를 선택해주세요</string>
    <string name="select_error">선택된 학교가 없습니다</string>
</resources>