<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.MenuFragment">

    <data>
        <variable
            name="viewModel"
            type="com.meals.school_food.viewmodel.MenuViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorGray">

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_menu"
                android:fontFamily="@font/nanum_square_round"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/school"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/nanum_square_round"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_school" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.schoolName}"
                        android:fontFamily="@font/nanum_square_round"
                        android:textColor="?android:attr/textColorPrimary"
                        tools:text="대구소프트웨어고등학교" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.schoolAddress}"
                        android:fontFamily="@font/nanum_square_round"
                        android:textColor="@color/colorText"
                        tools:text="대구광역시 달성군 구지면 창리로11길 93" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.changeClick()}"
                    android:text="변경"
                    android:fontFamily="@font/nanum_square_round"
                    android:layout_margin="20dp"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="기타"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/nanum_square_round"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:onClick="@{()->viewModel.openSourceClick()}">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/ic_code" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_source"
                        android:fontFamily="@font/nanum_square_round"
                        android:textColor="?android:attr/textColorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:onClick="@{()->viewModel.versionClick()}">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/ic_version" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:fontFamily="@font/nanum_square_round"
                        android:textColor="?android:attr/textColorPrimary" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>