<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.MealActivity">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.meals.school_food.viewmodel.MealViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/title_meal"
                android:fontFamily="@font/nanum_square_round"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.date}"
                android:onClick="@{()->viewModel.dateClick()}"
                android:textColor="@color/colorWhite"
                android:background="@drawable/background_primary"
                tools:text="2020년 7월 1일" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:padding="20dp"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="4"
                                android:src="@drawable/ic_breakfast"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/nanum_square_round"
                                android:textAlignment="center"
                                android:textSize="14sp"
                                android:textColor="@color/colorText"
                                android:text="@string/breakfast" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:textColor="@color/colorText"
                                android:fontFamily="@font/nanum_square_round"
                                android:text="@{viewModel.breakfast}"/>
                        </LinearLayout>
                    </LinearLayout>

                    <ProgressBar
                        tools:visibility="gone"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:padding="20dp"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="4"
                                android:src="@drawable/ic_lunch"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/nanum_square_round"
                                android:textAlignment="center"
                                android:textSize="14sp"
                                android:textColor="@color/colorText"
                                android:text="@string/lunch" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:textColor="@color/colorText"
                                android:fontFamily="@font/nanum_square_round"
                                android:text="@{viewModel.lunch}"/>
                        </LinearLayout>
                    </LinearLayout>

                    <ProgressBar
                        tools:visibility="gone"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:padding="20dp"
                            android:orientation="vertical"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="4"
                                android:src="@drawable/ic_dinner"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/nanum_square_round"
                                android:textAlignment="center"
                                android:textSize="14sp"
                                android:textColor="@color/colorText"
                                android:text="@string/dinner" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:textColor="@color/colorText"
                                android:fontFamily="@font/nanum_square_round"
                                android:text="@{viewModel.dinner}"/>
                        </LinearLayout>
                    </LinearLayout>

                    <ProgressBar
                        tools:visibility="gone"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</layout>