<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.HomeFragment">
    
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.meals.school_food.viewmodel.HomeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/nanum_square_round"
                    android:text="@string/app_name"
                    android:textSize="18sp"
                    android:textColor="?android:attr/textColorPrimary"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/nanum_square_round"
                        android:text="@string/today_meal"
                        android:textSize="16sp"
                        android:textColor="?android:attr/textColorPrimary"/>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:onClick="@{() -> viewModel.onMealDetailClick()}"
                        app:cardBackgroundColor="@color/colorWhite"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:padding="20dp"
                                    android:orientation="vertical"
                                    android:gravity="center">

                                    <ImageView
                                        android:id="@+id/meal_image"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="4"
                                        android:src="@drawable/ic_dinner"/>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight="1"
                                        android:fontFamily="@font/nanum_square_round"
                                        android:textAlignment="center"
                                        android:text="@{viewModel.time}"
                                        android:textSize="14sp"
                                        android:textColor="@color/colorText"
                                        tools:text="@string/diner" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:gravity="center">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="14sp"
                                        android:textColor="@color/colorText"
                                        android:fontFamily="@font/nanum_square_round"
                                        android:text="@{viewModel.mealText}"/>
                                </LinearLayout>
                            </LinearLayout>

                            <ProgressBar
                                style="?android:attr/progressBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nanum_square_round"
                            android:text="@string/month_schedule"
                            android:textSize="16sp"
                            android:textColor="?android:attr/textColorPrimary"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> viewModel.onScheduleDetailClick()}"
                            android:fontFamily="@font/nanum_square_round"
                            android:text="더보기"
                            android:textSize="14sp"
                            android:textColor="@color/colorTextLight"/>
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/colorWhite"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">

                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:overScrollMode="never"
                                app:adapter="@{viewModel.scheduleAdapter}"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"/>

                            <ProgressBar
                                style="?android:attr/progressBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>